samples/_failures_safe/1761189828_0f928a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83de13c4.c: In function ‘create_sample_graph’:
./samples/SAFE/__tmp_83de13c4.c:159:9: error: expected expression at end of input
  159 |         g.edges[i] =
      |         ^
./samples/SAFE/__tmp_83de13c4.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_83de13c4.c:159:9: error: expected declaration or statement at end of input
